# Particle_Motion_cython

./: .gitignore  CMakeLists.txt  Cython_test.ipynb  Patricle_writer.ipynb  README.md  main.cpp  particle_motion.cp312-win_amd64.pyd  particle_motion.cpp  particle_motion.html  particle_motion.pyx  setup.py
include/: EMField.hpp  Library.hpp  Particle.hpp  Point3D.hpp  Pusher.hpp  RadiationSpectrum.hpp  Vector3D.hpp  Writer.hpp
source/: EMField.cpp  Library.cpp  Pusher.cpp  RadiationSpectrum.cpp  Vector3D.cpp  Writer.cpp
